--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": "npx playwright test"
   },
   "dependencies": {
+    "@radix-ui/colors": "0.1.8",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-navigation-menu": "1.1.2",
+    "@radix-ui/react-popover": "1.0.5",
+    "classnames": "^2.3.2",
     "csv-parser": "^3.0.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
@@ -21,10 +27,13 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
+    "autoprefixer": "^10.4.14",
     "lighthouse": "^10.1.0",
     "node-fetch": "^3.3.1",
     "playwright": "^1.32.1",
     "playwright-lighthouse": "^3.0.0",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1",
     "util": "^0.12.5"
   }
 }
