--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx playwright test"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@radix-ui/colors": "0.1.8",
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-icons": "1.3.0",
@@ -22,6 +23,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.9",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   },
