--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "@types/axios": "^0.14.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
