--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "npx playwright test"
+    "test": "npx playwright test",
+    "export":"next report",
+    "deploy":"gh-pages -d out"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -13,6 +15,7 @@
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-navigation-menu": "1.1.2",
     "@radix-ui/react-popover": "1.0.5",
+    "@types/axios": "^0.14.0",
     "classnames": "^2.3.2",
     "csv-parser": "^3.0.0",
     "date-fns": "^2.29.3",
@@ -21,13 +24,13 @@
     "glob": "^9.3.2",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.4.1",
+    "next-translate": "^2.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scroll": "^1.8.9",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "@types/axios": "^0.14.0"
+    "remark-html": "^15.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
