--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.5",
     "next": "^13.4.1",
+    "next-ga": "^2.3.4",
     "next-translate": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
